testsuite/tests/name_resolution/xref_eq_chr_literal/test.out
Analyzing testchrlit.adb
########################

Resolving xrefs for node <AssignStmt testchrlit.adb:6:4-6:13>
*************************************************************

Expr: <Id "C" testchrlit.adb:6:4-6:5>
  references:    <DefiningName "C" testchrlit.adb:4:4-4:5>
  type:          <ConcreteTypeDecl ["Char"] testchrlit.adb:2:4-2:33>
  expected type: None
Expr: <Chr "'a'" testchrlit.adb:6:9-6:12>
  references:    <DefiningName "'a'" testchrlit.adb:2:18-2:21>
  type:          <ConcreteTypeDecl ["Char"] testchrlit.adb:2:4-2:33>
  expected type: <ConcreteTypeDecl ["Char"] testchrlit.adb:2:4-2:33>

Resolving xrefs for node <AssignStmt testchrlit.adb:9:4-9:12>
*************************************************************

Name resolution failed as expected with:

testchrlit.adb:9:9: error: expected Char, got universal integer
9 |    C := 12;
  |         ^^



Done.
